cmake_minimum_required(VERSION 2.8)


project(usburn)

set(CC)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/")
foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_CURRENT_SOURCE_DIR}/")
  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_CURRENT_SOURCE_DIR}/")
  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_CURRENT_SOURCE_DIR}/")
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )

set(CURRENT_PROJECT usburn)

include_directories( ${CMAKE_CURRENT_SOURCE_DIR} )
  
file (GLOB  SOURCE_FILES
            "*.h"
            "*.c"
            "*.cpp")

add_executable( ${CURRENT_PROJECT} ${SOURCE_FILES} )

target_link_libraries ( ${CURRENT_PROJECT} LINK_PRIVATE
                            usb )
